// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket blocks selectors Ticket selectors Select the group of tickets 1`] = `
Array [
  "modern-tribe",
]
`;

exports[`Ticket blocks selectors Ticket selectors Select the group of tickets 2`] = `
Array [
  "modern-tribe",
]
`;

exports[`Ticket blocks selectors Ticket selectors Select the group of tickets 3`] = `
Object {
  "modern-tribe": Object {
    "SKU": "",
    "available": 0,
    "capacity": "",
    "capacityType": "capped",
    "currencySymbol": undefined,
    "dateIsPristine": false,
    "description": "",
    "endDate": "September 1, 2118",
    "endDateMoment": "2018-09-01T22:30:00.000Z",
    "endTime": "22:30",
    "hasBeenCreated": false,
    "isEditing": false,
    "isLoading": false,
    "price": "",
    "provider": "",
    "sold": 0,
    "startDate": "September 1, 2018",
    "startDateMoment": "2018-09-01T22:30:00.000Z",
    "startTime": "22:30",
    "ticketId": 0,
    "title": "",
  },
}
`;

exports[`Ticket blocks selectors Ticket selectors Select type of tickets 1`] = `Array []`;

exports[`Ticket blocks selectors Ticket selectors Select type of tickets 2`] = `
Array [
  Object {
    "SKU": "",
    "available": 0,
    "capacity": "",
    "capacityType": "capped",
    "currencySymbol": undefined,
    "dateIsPristine": false,
    "description": "",
    "endDate": "September 1, 2118",
    "endDateMoment": "2018-09-01T22:30:00.000Z",
    "endTime": "22:30",
    "hasBeenCreated": false,
    "isEditing": false,
    "isLoading": false,
    "price": "",
    "provider": "",
    "sold": 0,
    "startDate": "September 1, 2018",
    "startDateMoment": "2018-09-01T22:30:00.000Z",
    "startTime": "22:30",
    "ticketId": 0,
    "title": "",
  },
]
`;

exports[`Ticket blocks selectors Ticket selectors Select type of tickets 3`] = `Array []`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 1`] = `"22:30"`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 2`] = `"22:30"`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 3`] = `"September 1, 2118"`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 4`] = `"September 1, 2018"`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 1`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 2`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 3`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 4`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 5`] = `"capped"`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 6`] = `false`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 7`] = `0`;
